// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RuleCard should render with a eventType name, target name, filter passthrow and skip execution enable 1`] = `
<div>
  <div
    aria-label="element card rule"
    class="MuiPaper-root MuiCard-root makeStyles-ruleCard-59 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      aria-label="header card rule"
      class="MuiCardHeader-root makeStyles-ruleCardHeader-60"
    >
      <div
        class="MuiCardHeader-avatar"
      >
        <div
          aria-label="avatar icon"
          class="MuiAvatar-root MuiAvatar-circle makeStyles-ruleCardAvatar-69 makeStyles-ruleCardAvatarOrange-73 MuiAvatar-colorDefault"
        >
          T
        </div>
      </div>
      <div
        class="MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
        >
          Rule 2
        </span>
        <span
          class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          1/1/2020 11:10:10
        </span>
      </div>
      <div
        class="MuiCardHeader-action"
      >
        <button
          aria-label="settings card rule"
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <hr
      class="MuiDivider-root"
    />
    <div
      aria-label="content card rule"
      class="makeStyles-ruleCardContent-61"
    >
      <div
        aria-label="eventType name card rule"
        class="makeStyles-ruleCardBody-62"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-63 MuiTypography-body1"
        >
          Event Type:
        </p>
        <p
          aria-label="eventType name"
          class="MuiTypography-root makeStyles-ruleCardBodyName-64 MuiTypography-body1"
        >
          EventType 2-rule-test
        </p>
      </div>
      <div
        aria-label="target name card rule"
        class="makeStyles-ruleCardBody-62"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-63 MuiTypography-body1"
        >
          Target:
        </p>
        <p
          aria-label="target name"
          class="MuiTypography-root makeStyles-ruleCardBodyName-64 MuiTypography-body1"
        >
          Target 2-rule-test
        </p>
      </div>
      <hr
        class="MuiDivider-root"
      />
      <div
        aria-label="filters card rule"
        class="makeStyles-ruleCardFilters-65"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-63 MuiTypography-body1"
        >
          Filters:
        </p>
        <div
          aria-label="filters container"
        >
          <div
            aria-label="filter expression passthrow"
          >
            <p
              class="MuiTypography-root makeStyles-ruleCardFilterExpressionPassthrow-78 MuiTypography-body1"
            >
              PASSTHROW
            </p>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root"
      />
      <div
        aria-label="status card rule"
        class="makeStyles-ruleCardStatus-66"
      >
        <div
          class="makeStyles-ruleCardStatusDate-67"
        >
          <span
            class="MuiTypography-root MuiTypography-caption"
          />
        </div>
        <div
          class="makeStyles-ruleCardStatusOneShot-68"
        >
          <div
            class="MuiFormGroup-root"
          >
            <label
              aria-label="skip consecutives enable"
              aria-readonly="true"
              class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementStart"
            >
              <span
                class="MuiSwitch-root MuiSwitch-sizeSmall"
              >
                <span
                  aria-disabled="false"
                  arial-label="skip consecutives input"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-84 MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-checked-85 Mui-checked"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      checked=""
                      class="PrivateSwitchBase-input-87 MuiSwitch-input"
                      readonly=""
                      type="checkbox"
                      value=""
                    />
                    <span
                      class="MuiSwitch-thumb"
                    />
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiSwitch-track"
                />
              </span>
              <span
                class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
              >
                Skip Consecutives
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RuleCard should render with a eventType name, target name, filters and skip execution disable 1`] = `
<div>
  <div
    aria-label="element card rule"
    class="MuiPaper-root MuiCard-root makeStyles-ruleCard-30 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      aria-label="header card rule"
      class="MuiCardHeader-root makeStyles-ruleCardHeader-31"
    >
      <div
        class="MuiCardHeader-avatar"
      >
        <div
          aria-label="avatar icon"
          class="MuiAvatar-root MuiAvatar-circle makeStyles-ruleCardAvatar-40 makeStyles-ruleCardAvatarPurple-43 MuiAvatar-colorDefault"
        >
          R
        </div>
      </div>
      <div
        class="MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
        >
          Rule 3
        </span>
        <span
          class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          1/1/2020 11:10:10
        </span>
      </div>
      <div
        class="MuiCardHeader-action"
      >
        <button
          aria-label="settings card rule"
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <hr
      class="MuiDivider-root"
    />
    <div
      aria-label="content card rule"
      class="makeStyles-ruleCardContent-32"
    >
      <div
        aria-label="eventType name card rule"
        class="makeStyles-ruleCardBody-33"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-34 MuiTypography-body1"
        >
          Event Type:
        </p>
        <p
          aria-label="eventType name"
          class="MuiTypography-root makeStyles-ruleCardBodyName-35 MuiTypography-body1"
        >
          EventType 3-rule-test
        </p>
      </div>
      <div
        aria-label="target name card rule"
        class="makeStyles-ruleCardBody-33"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-34 MuiTypography-body1"
        >
          Target:
        </p>
        <p
          aria-label="target name"
          class="MuiTypography-root makeStyles-ruleCardBodyName-35 MuiTypography-body1"
        >
          Target 3-rule-test
        </p>
      </div>
      <hr
        class="MuiDivider-root"
      />
      <div
        aria-label="filters card rule"
        class="makeStyles-ruleCardFilters-36"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-34 MuiTypography-body1"
        >
          Filters:
        </p>
        <div
          aria-label="filters container"
        >
          <div
            aria-label="container expressions"
            class="makeStyles-ruleCardFilterContainer-46"
          >
            <div
              aria-label="container expressions header"
              class="makeStyles-ruleCardFilterContainerHeader-47"
            >
              <p
                class="MuiTypography-root makeStyles-ruleCardFilterContainerHeaderText-48 MuiTypography-body1"
              >
                One Of
              </p>
            </div>
            <div
              aria-label="filter expression comparator"
              class="makeStyles-ruleCardFilterExpression-53"
            >
              <p
                aria-label="filter expression field"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-50 MuiTypography-body1"
              >
                hola
              </p>
              <p
                aria-label="filter expression operator"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-51 MuiTypography-body1"
              >
                =
              </p>
              <p
                aria-label="filter expression value"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-52 MuiTypography-body1"
              >
                1
              </p>
            </div>
          </div>
          <div
            aria-label="container expressions"
            class="makeStyles-ruleCardFilterContainer-46"
          >
            <div
              aria-label="container expressions header"
              class="makeStyles-ruleCardFilterContainerHeader-47"
            >
              <p
                class="MuiTypography-root makeStyles-ruleCardFilterContainerHeaderText-48 MuiTypography-body1"
              >
                All Of
              </p>
            </div>
            <div
              aria-label="filter expression comparator"
              class="makeStyles-ruleCardFilterExpression-53"
            >
              <p
                aria-label="filter expression field"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-50 MuiTypography-body1"
              >
                adios
              </p>
              <p
                aria-label="filter expression operator"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-51 MuiTypography-body1"
              >
                =
              </p>
              <p
                aria-label="filter expression value"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-52 MuiTypography-body1"
              >
                2
              </p>
            </div>
          </div>
          <div
            aria-label="filter expression comparator"
            class="makeStyles-ruleCardFilterExpression-53"
          >
            <p
              aria-label="filter expression field"
              class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-50 MuiTypography-body1"
            >
              p1
            </p>
            <p
              aria-label="filter expression operator"
              class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-51 MuiTypography-body1"
            >
              =
            </p>
            <p
              aria-label="filter expression value"
              class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-52 MuiTypography-body1"
            >
              valor
            </p>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root"
      />
      <div
        aria-label="status card rule"
        class="makeStyles-ruleCardStatus-37"
      >
        <div
          class="makeStyles-ruleCardStatusDate-38"
        >
          <span
            class="MuiTypography-root MuiTypography-caption"
          />
        </div>
        <div
          class="makeStyles-ruleCardStatusOneShot-39"
        >
          <div
            class="MuiFormGroup-root"
          >
            <label
              aria-label="skip consecutives disable"
              aria-readonly="true"
              class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementStart"
            >
              <span
                class="MuiSwitch-root MuiSwitch-sizeSmall"
              >
                <span
                  aria-disabled="false"
                  arial-label="skip consecutives input"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-55 MuiSwitch-switchBase MuiSwitch-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-58 MuiSwitch-input"
                      readonly=""
                      type="checkbox"
                      value=""
                    />
                    <span
                      class="MuiSwitch-thumb"
                    />
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiSwitch-track"
                />
              </span>
              <span
                class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
              >
                Skip Consecutives
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RuleCard should render with a rule and snap 1`] = `
<div>
  <div
    aria-label="element card rule"
    class="MuiPaper-root MuiCard-root makeStyles-ruleCard-1 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      aria-label="header card rule"
      class="MuiCardHeader-root makeStyles-ruleCardHeader-2"
    >
      <div
        class="MuiCardHeader-avatar"
      >
        <div
          aria-label="avatar icon"
          class="MuiAvatar-root MuiAvatar-circle makeStyles-ruleCardAvatar-11 makeStyles-ruleCardAvatarPurple-14 MuiAvatar-colorDefault"
        >
          R
        </div>
      </div>
      <div
        class="MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
        >
          Rule 3
        </span>
        <span
          class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          1/1/2020 11:10:10
        </span>
      </div>
      <div
        class="MuiCardHeader-action"
      >
        <button
          aria-label="settings card rule"
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <hr
      class="MuiDivider-root"
    />
    <div
      aria-label="content card rule"
      class="makeStyles-ruleCardContent-3"
    >
      <div
        aria-label="eventType name card rule"
        class="makeStyles-ruleCardBody-4"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-5 MuiTypography-body1"
        >
          Event Type:
        </p>
        <p
          aria-label="eventType name"
          class="MuiTypography-root makeStyles-ruleCardBodyName-6 MuiTypography-body1"
        >
          EventType 3-rule-test
        </p>
      </div>
      <div
        aria-label="target name card rule"
        class="makeStyles-ruleCardBody-4"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-5 MuiTypography-body1"
        >
          Target:
        </p>
        <p
          aria-label="target name"
          class="MuiTypography-root makeStyles-ruleCardBodyName-6 MuiTypography-body1"
        >
          Target 3-rule-test
        </p>
      </div>
      <hr
        class="MuiDivider-root"
      />
      <div
        aria-label="filters card rule"
        class="makeStyles-ruleCardFilters-7"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-5 MuiTypography-body1"
        >
          Filters:
        </p>
        <div
          aria-label="filters container"
        >
          <div
            aria-label="container expressions"
            class="makeStyles-ruleCardFilterContainer-17"
          >
            <div
              aria-label="container expressions header"
              class="makeStyles-ruleCardFilterContainerHeader-18"
            >
              <p
                class="MuiTypography-root makeStyles-ruleCardFilterContainerHeaderText-19 MuiTypography-body1"
              >
                One Of
              </p>
            </div>
            <div
              aria-label="filter expression comparator"
              class="makeStyles-ruleCardFilterExpression-24"
            >
              <p
                aria-label="filter expression field"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-21 MuiTypography-body1"
              >
                hola
              </p>
              <p
                aria-label="filter expression operator"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-22 MuiTypography-body1"
              >
                =
              </p>
              <p
                aria-label="filter expression value"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-23 MuiTypography-body1"
              >
                1
              </p>
            </div>
          </div>
          <div
            aria-label="container expressions"
            class="makeStyles-ruleCardFilterContainer-17"
          >
            <div
              aria-label="container expressions header"
              class="makeStyles-ruleCardFilterContainerHeader-18"
            >
              <p
                class="MuiTypography-root makeStyles-ruleCardFilterContainerHeaderText-19 MuiTypography-body1"
              >
                All Of
              </p>
            </div>
            <div
              aria-label="filter expression comparator"
              class="makeStyles-ruleCardFilterExpression-24"
            >
              <p
                aria-label="filter expression field"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-21 MuiTypography-body1"
              >
                adios
              </p>
              <p
                aria-label="filter expression operator"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-22 MuiTypography-body1"
              >
                =
              </p>
              <p
                aria-label="filter expression value"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-23 MuiTypography-body1"
              >
                2
              </p>
            </div>
          </div>
          <div
            aria-label="filter expression comparator"
            class="makeStyles-ruleCardFilterExpression-24"
          >
            <p
              aria-label="filter expression field"
              class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-21 MuiTypography-body1"
            >
              p1
            </p>
            <p
              aria-label="filter expression operator"
              class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-22 MuiTypography-body1"
            >
              =
            </p>
            <p
              aria-label="filter expression value"
              class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-23 MuiTypography-body1"
            >
              valor
            </p>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root"
      />
      <div
        aria-label="status card rule"
        class="makeStyles-ruleCardStatus-8"
      >
        <div
          class="makeStyles-ruleCardStatusDate-9"
        >
          <span
            class="MuiTypography-root MuiTypography-caption"
          />
        </div>
        <div
          class="makeStyles-ruleCardStatusOneShot-10"
        >
          <div
            class="MuiFormGroup-root"
          >
            <label
              aria-label="skip consecutives disable"
              aria-readonly="true"
              class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementStart"
            >
              <span
                class="MuiSwitch-root MuiSwitch-sizeSmall"
              >
                <span
                  aria-disabled="false"
                  arial-label="skip consecutives input"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-26 MuiSwitch-switchBase MuiSwitch-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-29 MuiSwitch-input"
                      readonly=""
                      type="checkbox"
                      value=""
                    />
                    <span
                      class="MuiSwitch-thumb"
                    />
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiSwitch-track"
                />
              </span>
              <span
                class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
              >
                Skip Consecutives
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
